fix wrong type to pass compileTestJava
fix wrong type to pass compileTestJava